app/assets/stylesheets/common/admin/dashboard.scss
/* ... */
.dashboard-next.general {
  display: flex;
  flex-direction: column;
}

.dashboard-new-features {
  &.ordered-first {
    order: -1;
  }

  &:not(.ordered-first) {
    .new-features-dismiss {
      display: none;
    }
  }

  .section-footer {
    margin: 1.5em;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    .btn {
      margin-left: 1em;
    }
  }
}

.admin-new-feature-item {
  display: flex;
  align-items: flex-start;
  margin-bottom: 1.5em;
  background-color: var(--primary-very-low);
  padding: 1em;

  &__new-feature-emoji {
    font-size: 1.2em;
    padding-left: 0;
    padding-right: 0.5em;
  }

  &__content {
    padding-right: 0.5em;
    width: 100%;
  }
  &__feature-description {
    padding-top: 1em;
  }
  &__header {
    display: flex;
    align-items: flex-start;
    font-size: var(--font-up-1);
    font-weight: bold;
    margin-bottom: 0.5em;
  }
  &__screenshot {
    width: 100%;
  }
}

